kubernetes/apps/sabnzbd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-http
  labels:
    app: sabnzbd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-http-to-https@kubernetescrd"
spec:
  rules:
    - host: sabnzbd.internal.paulfriedrich.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-https
  labels:
    app: sabnzbd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: sabnzbd.internal.paulfriedrich.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  name: http
  tls:
    - hosts:
        - sabnzbd.internal.paulfriedrich.me
